force-app/main/default/objects/Rate_Card__c/Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Rate Card</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>