force-app/main/default/objects/Rate_Card__c/fields/Call_Back_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Bill_Rate__c</fullName>
    <label>Call Back Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>