force-app/main/default/objects/Rate_Card__c/fields/Call_Back_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Pay_Rate__c</fullName>
    <defaultValue>1.5</defaultValue>
    <description>The Multiplier Fields</description>
    <label>Call Back Pay Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>