force-app/main/default/objects/Rate_Card__c/fields/Double_Time_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Bill_Rate__c</fullName>
    <label>Double Time Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>