force-app/main/default/objects/Rate_Card__c/fields/DoubleTimePayRate__c.field-meta.xml
<CustomField>
    <fullName>DoubleTimePayRate__c</fullName>
    <description>The Multiplier Fields</description>
    <label>Double Time Pay Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>