force-app/main/default/objects/Rate_Card__c/fields/Holiday_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Bill_Rate__c</fullName>
    <label>Holiday Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>