force-app/main/default/objects/Rate_Card__c/fields/Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Day__c</fullName>
    <label>Hours Per Day</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>