force-app/main/default/objects/Rate_Card__c/fields/Overtime_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Bill_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overtime Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>