force-app/main/default/objects/Rate_Card__c/fields/Regular_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Regular_Bill_Rate__c</fullName>
    <defaultValue>1.5</defaultValue>
    <description>Standard clinical hourly rate charged to the hospital</description>
    <label>Regular Bill Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>