force-app/main/default/objects/Rate_Card__c/fields/Regular_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Regular_Pay_Rate__c</fullName>
    <description>Standard Clinical hourly pay for doctor</description>
    <label>Regular Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>